working_website_directory

--- a/LOBF.ipynb
+++ b/LOBF.ipynb
@@ -204,7 +204,9 @@
    "id": "3550d4c8-e92d-4321-bae6-30cc3e74a80f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#you betcha,"
+   ]
   }
  ],
  "metadata": {
