--- a/LOBF.ipynb
+++ b/LOBF.ipynb
@@ -205,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#you betcha,"
+    "#you betcha, this is probably super wrong"
    ]
   }
  ],
